<resources>
    <string name="app_name">Valyutalar kursi</string>
    <string name="currency_exchange">Valyuta konvetori</string>
    <string name="uzbek_summ">O\'zbek so\'mi</string>
    <string name="no_connection">Tarmoqqa ulanish imkoni yo\'q</string>
    <string name="refresh">Takrorlash</string>
    <string name="quit">Chiqish</string>
    <string name="author">© Mahmudxon</string>
    <string name="rate_us">Play marketda baholang</string>
    <string name="app_source">Dastur kodlari</string>
    <string name="join_telegram_channel">Telegram kanalimiz</string>
    <string name="join_me_facebook">Biz Facebookda</string>
    <string name="follow_me_twitter">Biz Twitterda</string>
    <string name="fallow_me_instagram">Biz Instagramda</string>
    <string name="feedback">Fikr mulohaza</string>
    <string name="about_app">Dastur haqida</string>
    <string name="your_name">Ismingiz</string>
    <string name="contact">E-mail yoki Telefon</string>
    <string name="your_message">Sizning Xabaringiz</string>
    <string name="send_success_feedback">Xabaringiz jo\'natildi, albatta uni ko\'rib chiqamiz! E\'tibor uchun tashakkur!</string>
    <string name="send_fail_feedback">Xabar jo\'natilmadi! Ehtimol, internetga ulanish imkoni yo\'qdir :-(</string>
    <string name="need_3_characters_message">Barcha maydonlar 3 tadan ko\'p belgi bilan to\'ldirilishi shart!</string>
    <string name="please_wait">Iltimos, kuting....</string>
    <string name="source"><a href="https://cbu.uz/uz/">O\‘zbekiston Respublikasi Markaziy banki</a> ochiq ma\'lumotlari asosida tayyorlangan. Dastur ochiq kodli bo\'lib, <a href="https://opensource.org/licenses/Apache-2.0">Apache License</a> asosida tarqatiladi</string>
    <string name="ok">Ok</string>
</resources>