<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/teal_700"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feedback"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_send_24" />

    </LinearLayout>

    <EditText
        android:id="@+id/sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_back"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_back"
        android:hint="@string/contact"
        android:inputType="textWebEmailAddress"
        android:maxLength="20"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_back"
        android:gravity="start"
        android:hint="@string/your_message"
        android:inputType="textMultiLine"
        android:maxLength="500"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

</LinearLayout>